Insertando la conexion

--- a/POS/src/POS.Api/appsettings.json
+++ b/POS/src/POS.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "POSConnectionString" : "Server=localhost;Database=eco23;TrustServerCertificate=True;User id=core;Password=index"
+  }
 }
