--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,11 +14,12 @@
             "args": [],
             "cwd": "${workspaceFolder}/POS/src/POS.Api",
             "stopAtEntry": false,
+            "console": "externalTerminal",
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
-            },
+            // "serverReadyAction": {
+            //     "action": "openExternally",
+            //     "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            // },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
