--- a/POS/src/POS.Api/POS.Api.csproj
+++ b/POS/src/POS.Api/POS.Api.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\POS.Infrastructure\POS.Infrastructure.csproj" />
+    <ProjectReference Include="..\POS.Application\POS.Application.csproj" />
+  </ItemGroup>
+
 </Project>
