--- a/POS/src/POS.Application/POS.Application.csproj
+++ b/POS/src/POS.Application/POS.Application.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\POS.Domain\POS.Domain.csproj" />
     <ProjectReference Include="..\POS.Infrastructure\POS.Infrastructure.csproj" />
+    <ProjectReference Include="..\POS.Utilities\POS.Utilities.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
